--- a/index.html
+++ b/index.html
@@ -4,18 +4,19 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="assets/icons/favicon-32x32.png">
+  <link rel="stylesheet" href="assets/css/style.css">
   
   <title>Frontend Mentor | Todo app</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
 </head>
 <body>
 
+
+
+  <div class="background-header">
+    <img src="./assets/images/bg-desktop-light.jpg" alt="">
+  </div>
   Todo
 
   <!-- Add dynamic number --> items left
@@ -30,7 +31,10 @@
 
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="https://github.com/ZuuZaa/todo">Zumrud Baghirova</a>.
   </div>
+
+
+  <script src="assets/js/script.js"></script>
 </body>
 </html>
